# family-context-live

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  demo_excel.xlsx  docker-compose.dev.yaml  docker-compose.prod.nginx.yaml  docker-compose.prod.yaml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: linting.yml  tests.yml
core/: forms.py  middleware.py  models.py  search.py  signals.py  urls.py  views.py
core/factories/: contact.py  housing.py  person.py  relationship.py  school.py  service.py  shared.py
core/helpers/: shared.py
core/migrations/: 0001_initial.py  0002_alter_person_nhs_number_squashed_0003_alter_person_nhs_number.py  0002_pageviewlog.py  0002_person_address_person_cms_id_person_date_of_birth_and_more.py  0003_pageviewlog_timestamp.py  0003_trigram.py  0004_alter_school_coverage_geographic_area.py  0004_loggedinuser.py  0005_servicesummary_person_alter_adultsocialcare_person_and_more.py  0006_remove_servicesummary_person.py  0007_adultsocialcare_service_housing_service_and_more.py
core/templates/: home.html  name_search.html  page_nav.html  person.html  person_id_details.html  person_relations.html  person_service_involvement.html  person_service_records.html  search.html  (+1 more)
family_context/: manage.py  settings.py  urls.py
fixtures/: ASC.csv  CSC.csv  acute.csv  community.csv  housing.csv
infrastructure/: README.md
nginx/: nginx.conf  nginx.ssl.conf
sample_data/: csc.csv  education.csv
templates/: _base.html  authentication_error.html  home.html
(+34 files in other folders)
